test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_parse/array_of_functions_2.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[12]:
  int
  (
  identifier(foo)
  [
  const int(3)
  ]
  )
  (
  int
  identifier(a)
  )
  ;
